--- a/views/front/header.ejs
+++ b/views/front/header.ejs
@@ -43,7 +43,7 @@
 	      <div class="collapse navbar-collapse" id="navbarCollapse">
 	        <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
-                <a class="nav-link" href="http://localhost:3000">Home</a>
+                <a class="nav-link" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/about">About</a>
