--- a/views/front/home.ejs
+++ b/views/front/home.ejs
@@ -1,9 +1,53 @@
 <%- include('../front/header.ejs') %>
 
 
-
+<style>
+	/* @media only screen and (max-width: 980px) {
+		.blog-box{
+			margin-top: 60px;
+		}
+} */
+</style>
     <section class="banner">
-    	<div class="banner-box">
+		<div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+			<div class="carousel-indicators">
+			  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+			  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+			  <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner h-25">
+			  <div class="carousel-item active" data-bs-interval="7000">
+				<img src="https://images.unsplash.com/photo-1664575602276-acd073f104c1?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="d-block w-100  img-fluid" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+				  <h5>First slide label</h5>
+				  <p>Some representative placeholder content for the first slide.</p>
+				</div>
+			  </div>
+			  <div class="carousel-item" data-bs-interval="3000">
+				<img src="https://images.unsplash.com/photo-1620570623737-efc0ec4ab486?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" class="d-block w-100 img-fluid" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+				  <h5>Second slide label</h5>
+				  <p>Some representative placeholder content for the second slide.</p>
+				</div>
+			  </div>
+			  <div class="carousel-item">
+				<img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1169&q=80" class="d-block w-100 img-fluid" alt="...">
+				<div class="carousel-caption d-none d-md-block">
+				  <h5>Third slide label</h5>
+				  <p>Some representative placeholder content for the third slide.</p>
+				</div>
+			  </div>
+			</div>
+			<!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+			  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			  <span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+			  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+			  <span class="visually-hidden">Next</span>
+			</button> -->
+		  </div>
+    	<!-- <div class="banner-box">
     		<div class="intro-text">
     			<div class="intro-text-box">
 		    		<h1>Lorem Ipsum is simply dummy text</h1>
@@ -11,7 +55,7 @@
 	    		</div>
     		</div>
     		<img src="assets/images/banner.jpg" alt="banner" />
-    	</div>
+    	</div> -->
     </section> 
     <section class="featured-blog mtb-40">
     	<div class="container">
@@ -26,7 +70,7 @@
 
 							<!-- tolocaledatestring data ka format theek krne ke liye -->
 								
-							<p><%= item.description.slice(0,120) %> </p>
+							<p class="text-justify"><%= item.description.slice(0,120) %> </p>
 							<!-- slice chota krne ke liye -->
 							<a href="/blogdetail/<%= item.id %>" class="btn btn-danger">Read more...</a>
 						</div>
