--- a/views/front/footer.ejs
+++ b/views/front/footer.ejs
@@ -55,7 +55,7 @@
             <!-- Grid column -->
             <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
               <!-- Content -->
-              <h6 class="text-uppercase fw-bold">Company name</h6>
+              <h6 class="text-uppercase fw-bold">IT HUB</h6>
               <hr
                   class="mb-4 mt-0 d-inline-block mx-auto"
                   style="width: 60px; background-color: #7c4dff; height: 2px"
@@ -77,16 +77,16 @@
                   style="width: 60px; background-color: #7c4dff; height: 2px"
                   />
               <p>
-                <a href="#!" class="text-white">MDBootstrap</a>
+                <a href="" class="text-white">MDBootstrap</a>
               </p>
               <p>
-                <a href="#!" class="text-white">MDWordPress</a>
+                <a href="" class="text-white">MDWordPress</a>
               </p>
               <p>
-                <a href="#!" class="text-white">BrandFlow</a>
+                <a href="" class="text-white">BrandFlow</a>
               </p>
               <p>
-                <a href="#!" class="text-white">Bootstrap Angular</a>
+                <a href="" class="text-white">Bootstrap Angular</a>
               </p>
             </div>
             <!-- Grid column -->
@@ -100,16 +100,16 @@
                   style="width: 60px; background-color: #7c4dff; height: 2px"
                   />
               <p>
-                <a href="#!" class="text-white">Your Account</a>
+                <a href="" class="text-white">Your Account</a>
               </p>
               <p>
-                <a href="#!" class="text-white">Become an Affiliate</a>
+                <a href="" class="text-white">Become an Affiliate</a>
               </p>
               <p>
-                <a href="#!" class="text-white">Shipping Rates</a>
+                <a href="" class="text-white">Shipping Rates</a>
               </p>
               <p>
-                <a href="#!" class="text-white">Help</a>
+                <a href="" class="text-white">Help</a>
               </p>
             </div>
             <!-- Grid column -->
@@ -122,10 +122,10 @@
                   class="mb-4 mt-0 d-inline-block mx-auto"
                   style="width: 60px; background-color: #7c4dff; height: 2px"
                   />
-              <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-              <p><i class="fas fa-envelope mr-3"></i> info@example.com</p>
-              <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
-              <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
+              <p><i class="fas fa-home mr-3"></i> GWALIOR,M.P </p>
+              <p><i class="fas fa-envelope mr-3"></i> gargjirahul@gmail.com</p>
+              <p><i class="fas fa-phone mr-3"></i> 6267467976</p>
+              <!-- <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p> -->
             </div>
             <!-- Grid column -->
           </div>
@@ -135,7 +135,7 @@
       <!-- Section: Links  -->
   
       <!-- Copyright -->
-      <div
+      <!-- <div
            class="text-center p-3"
            style="background-color: rgba(0, 0, 0, 0.2)"
            >
@@ -143,7 +143,7 @@
         <a class="text-white" href="https://mdbootstrap.com/"
            >MDBootstrap.com</a
           >
-      </div>
+      </div> -->
       <!-- Copyright -->
     </footer>
     <!-- Footer -->
