--- a/views/Admin/blog/blogdisplay.ejs
+++ b/views/Admin/blog/blogdisplay.ejs
@@ -26,6 +26,7 @@
                                 <a href="/admin/addblogs" class="btn btn-success bi bi-person-plus-fill"></a>
                             </div>
                         </div>
+                        <div style="overflow-x: auto;">
                         <table class="table table-bordered table-striped">
                             <tr>
                                 <th>#ID</th>
@@ -62,6 +63,7 @@
                         
                            
                         </table>
+                    </div>
                     </div>   
                 </div>
             </div>
