--- a/views/Admin/contact/contactadmin.ejs
+++ b/views/Admin/contact/contactadmin.ejs
@@ -26,6 +26,7 @@
                                 <a href="/admin/addblogs" class="btn btn-success">Add blog</a>
                             </div> -->
                         </div>
+                        <div style="overflow-x: auto;">
                         <table class="table table-bordered table-striped">
                             <tr>
                                 <th>#ID</th>
@@ -59,7 +60,7 @@
                            <% }) %>
                         
                            
-                        </table>
+                        </table></div>
                     </div>   
                 </div>
             </div>
