--- a/views/front/header.ejs
+++ b/views/front/header.ejs
@@ -34,9 +34,9 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-blue">
     	<div class="container">
 	      <a class="navbar-brand" href="/">
-	      	<img src="/assets/images/logo.png" alt="Angular Project" />
+	      	<!-- <img src="/assets/images/logo.png" alt="Angular Project" /> -->
           <!-- <h2><span>IT</span> HUB</h2> -->
-      
+          <h2> 𝕀𝕋 ℍ𝕌𝔹</h2> 
 	      </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
