--- a/views/front/footer.ejs
+++ b/views/front/footer.ejs
@@ -123,7 +123,7 @@
                   style="width: 60px; background-color: #7c4dff; height: 2px"
                   />
               <p><i class="fas fa-home mr-3"></i> GWALIOR,M.P </p>
-              <p><i class="fas fa-envelope mr-3"></i> gargjirahul@gmail.com</p>
+              <p><i class="fas fa-envelope mr-3"></i> krishnapal26061999@gmail.com</p>
               <p><i class="fas fa-phone mr-3"></i> 6267467976</p>
               <!-- <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p> -->
             </div>
